--- a/index.html
+++ b/index.html
@@ -16,5 +16,103 @@
 
 <body>
     
+    <strong> Esercizio per Casa </strong>
+
+    <div class="container">
+
+        <div class="row primary">
+            <div class="col-1"> 1 Col</div>
+            <div class="col-1"> 1 Col</div>
+            <div class="col-1"> 1 Col</div>
+            <div class="col-1"> 1 Col</div>
+            <div class="col-1"> 1 Col</div>
+            <div class="col-1"> 1 Col</div>
+            <div class="col-1"> 1 Col</div>
+            <div class="col-1"> 1 Col</div>
+            <div class="col-1"> 1 Col</div>
+            <div class="col-1"> 1 Col</div>
+            <div class="col-1"> 1 Col</div>
+            <div class="col-1"> 1 Col</div>
+        </div>
+
+        <div class="row primary">
+            <div class="col-2"> col </div>
+            <div class="col-5"> col </div>
+            <div class="col-5"> col </div>
+        </div>
+
+        <div class="row primary">
+            <div class="col-12"> 12 col </div>
+        </div>
+
+        <div class="row primary">
+            <div class="col-8"> 8 col </div>
+            <div class="col-2"> 2 col </div>
+            <div class="col-2"> 2 col </div>
+        </div>
+
+        <div class="row primary">
+            <div class="col-1"> 1 col </div>
+            <div class="col-2"> 2 col </div>
+            <div class="col-2"> 2 col </div>
+            <div class="col-6"> 6 col </div>
+            <div class="col-1"> 1 col </div>
+        </div>
+
+        <div class="row primary">
+            <div class="col-6 nest">
+                <div class="col-2 nested"> Nested 2 col </div>
+                <div class="col-2 nested"> Nested 2 col </div>
+                <div class="col-8 nested"> Nested 8 col </div>
+            </div>
+
+            <div class="col-6 nest">
+                <div class="col-6 nested"> Nested 6 col </div>
+                <div class="col-6 nested"> Nested 6 col </div>
+            </div>
+        </div>
+
+    </div>
+
+    <br>
+
+    <div class="container fixed-height">
+
+        <div class="row primary">
+            <div class="col-12 primary"></div>
+        </div>
+
+        <div class="row primary">
+            <div class="col-1"></div>
+            <div class="col-11"></div>
+        </div>
+
+        <div class="row primary">
+            <div class="col-2"></div>
+            <div class="col-10"></div>
+        </div>
+
+        <div class="row primary">
+            <div class="col-3"></div>
+            <div class="col-9"></div>
+        </div>
+
+        <div class="row primary">
+            <div class="col-4"></div>
+            <div class="col-8"></div>
+        </div>
+
+        <div class="row primary">
+            <div class="col-5"></div>
+            <div class="col-7"></div>
+        </div>
+
+        <div class="row primary">
+            <div class="col-6"></div>
+            <div class="col-6"></div>
+        </div>
+    
+    </div>
+
 </body>
 </html>
