2a parte esercizio (offset) completata + correzione offset file css

--- a/index.html
+++ b/index.html
@@ -116,10 +116,24 @@
     </div>
 
     <br>
-    
+
     <!-- 2a PARTE ESERCIZIO (OFFSET) -->
     <strong> Offset </strong>
 
+    <div class="container offset">
+        <div class="col-1 col-offset-1 primary fixed-height"></div>
+        <div class="col-2 col-offset-2 primary fixed-height"></div>
+        <div class="col-3 col-offset-3 primary fixed-height"></div>
+        <div class="col-4 col-offset-4 primary fixed-height"></div>
+        <div class="col-5 col-offset-5 primary fixed-height"></div>
+        <div class="col-6 col-offset-6 primary fixed-height"></div>
+        <div class="col-7 col-offset-7 primary fixed-height"></div>
+        <div class="col-8 col-offset-8 primary fixed-height"></div>
+        <div class="col-9 col-offset-9 primary fixed-height"></div>
+        <div class="col-10 col-offset-10 primary fixed-height"></div>
+        <div class="col-11 col-offset-11 primary fixed-height"></div>
+        <div class="col-12 primary fixed-height"></div>
+    </div>
 
 </body>
 </html>
