--- a/bonus/index.html
+++ b/bonus/index.html
@@ -14,8 +14,10 @@
 
 <body>
 
+    <!-- Prova 16 column -->
     <div class="container">
 
+        <!-- Fungo -->
         <div class="row">
             <div class="col-5"></div>
             <div class="col-6 black"></div>
@@ -41,7 +43,149 @@
             <div class="col-1 black"></div>
             <div class="col-2"></div>
         </div>
+
+        <div class="row">
+            <div class="col-1"></div>
+            <div class="col-1 black"></div>
+            <div class="col-2 dark-green"></div>
+            <div class="col-2 green"></div>
+            <div class="col-4 light-green"></div>
+            <div class="col-2 green"></div>
+            <div class="col-2 dark-green"></div>
+            <div class="col-1 black"></div>
+            <div class="col-1"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-1"></div>
+            <div class="col-1 black"></div>
+            <div class="col-1 dark-green"></div>
+            <div class="col-2 green"></div>
+            <div class="col-6 light-green"></div>
+            <div class="col-2 green"></div>
+            <div class="col-1 dark-green"></div>
+            <div class="col-1 black"></div>
+            <div class="col-1"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-1 black"></div>
+            <div class="col-1"></div>
+            <div class="col-2 green"></div>
+            <div class="col-2 light-green"></div>
+            <div class="col-4"></div>
+            <div class="col-2 light-green"></div>
+            <div class="col-2 green"></div>
+            <div class="col-1"></div>
+            <div class="col-1 black"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-1 black"></div>
+            <div class="col-2"></div>
+            <div class="col-1 green"></div>
+            <div class="col-1 light-green"></div>
+            <div class="col-6"></div>
+            <div class="col-1 light-green"></div>
+            <div class="col-1 green"></div>
+            <div class="col-2"></div>
+            <div class="col-1 black"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-1 black"></div>
+            <div class="col-2"></div>
+            <div class="col-1 green"></div>
+            <div class="col-1 light-green"></div>
+            <div class="col-6"></div>
+            <div class="col-1 light-green"></div>
+            <div class="col-1 green"></div>
+            <div class="col-2"></div>
+            <div class="col-1 black"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-1 black"></div>
+            <div class="col-1"></div>
+            <div class="col-3 green"></div>
+            <div class="col-6"></div>
+            <div class="col-3 green"></div>
+            <div class="col-1"></div>
+            <div class="col-1 black"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-1 black"></div>
+            <div class="col-1 dark-green"></div>
+            <div class="col-2 green"></div>
+            <div class="col-2 dark-green"></div>
+            <div class="col-4"></div>
+            <div class="col-2 dark-green"></div>
+            <div class="col-2 green"></div>
+            <div class="col-1 dark-green"></div>
+            <div class="col-1 black"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-1 black"></div>
+            <div class="col-3 dark-green"></div>
+            <div class="col-8 black"></div>
+            <div class="col-3 dark-green"></div>
+            <div class="col-1 black"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-1"></div>
+            <div class="col-3 black"></div>
+            <div class="col-2 dark-pink"></div>
+            <div class="col-1 black"></div>
+            <div class="col-2 dark-pink"></div>
+            <div class="col-1 black"></div>
+            <div class="col-2 dark-pink"></div>
+            <div class="col-3 black"></div>
+            <div class="col-1"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-1 black"></div>
+            <div class="col-1 dark-pink"></div>
+            <div class="col-2 pink"></div>
+            <div class="col-1 black"></div>
+            <div class="col-2 pink"></div>
+            <div class="col-1 black"></div>
+            <div class="col-2 pink"></div>
+            <div class="col-1 dark-pink"></div>
+            <div class="col-1 black"></div>
+            <div class="col-2"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-1 black"></div>
+            <div class="col-1 dark-pink"></div>
+            <div class="col-8 pink"></div>
+            <div class="col-1 dark-pink"></div>
+            <div class="col-1 black"></div>
+            <div class="col-2"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-3"></div>
+            <div class="col-1 black"></div>
+            <div class="col-1 dark-pink"></div>
+            <div class="col-6 pink"></div>
+            <div class="col-1 dark-pink"></div>
+            <div class="col-1 black"></div>
+            <div class="col-3"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-4"></div>
+            <div class="col-8 black"></div>
+            <div class="col-4"></div>
+        </div>
     </div>
-    
+
 </body>
 </html>
