--- a/bonus12/index.html
+++ b/bonus12/index.html
@@ -4,15 +4,74 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pixel Art layout 12 columns</title>
 
     <!-- COLLEGAMENTO FILE CSS -->
-    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./12bool.css">
     <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
+
+    <!-- Pokemon starter Kanto -->
+    <div class="container">
+
+        <h1> Bulbasaur </h1>
+        <div class="row">
+            <div class="col-5"></div>
+            <div class="col-2 black"></div>
+            <div class="col-5"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-4"></div>
+            <div class="col-1 black"></div>
+            <div class="col-2 b-green"></div>
+            <div class="col-1 black"></div>
+            <div class="col-4"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-3"></div>
+            <div class="col-1 black"></div>
+            <div class="col-1 b-green"></div>
+            <div class="col-2 black"></div>
+            <div class="col-1 b-green"></div>
+            <div class="col-1 black"></div>
+            <div class="col-3"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-1 black"></div>
+            <div class="col-6 b-green"></div>
+            <div class="col-1 black"></div>
+            <div class="col-2"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-1"></div>
+            <div class="col-1 black"></div>
+            <div class="col-1 b-green"></div>
+            <div class="col-1 black"></div>
+            <div class="col-4 b-green"></div>
+            <div class="col-1 black"></div>
+            <div class="col-1 b-green"></div>
+            <div class="col-1 black"></div>
+            <div class="col-1"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-1"></div>
+            <div class="col-2 black"></div>
+            <div class="col-1 b-light-green"></div>
+            <div class="col-4 black"></div>
+            <div class="col-1 b-light-green"></div>
+            <div class="col-2 black"></div>
+            <div class="col-1"></div>
+        </div>
     
+    </div>
 </body>
 </html>
